--- a/graph-toolkit-one-productivity-hub/env/.env.dev
+++ b/graph-toolkit-one-productivity-hub/env/.env.dev
@@ -10,6 +10,7 @@ RESOURCE_SUFFIX=
 
 # Generated during provision, you can also add your own variables.
 TEAMS_APP_ID=
+TEAMS_APP_TENANT_ID=
 AAD_APP_CLIENT_ID=
 AAD_APP_OBJECT_ID=
 AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
