--- a/share-now/env/.env.local
+++ b/share-now/env/.env.local
@@ -1,4 +1,4 @@
-# This file includes environment variables that will be committed to git by default.
+# This file includes environment variables that can be committed to git. It's gitignored by default because it represents your local development environment.
 
 # Built-in environment variables
 TEAMSFX_ENV=local
