--- a/share-now/teamsapp.yml
+++ b/share-now/teamsapp.yml
@@ -3,11 +3,11 @@ version: 1.0.0
 environmentFolderPath: ./env
 
 provision:
-  - uses: aadApp/create # Creates a new AAD app to authenticate users if AAD_APP_CLIENT_ID environment variable is empty
+  - uses: aadApp/create # Creates a new Azure Active Directory (AAD) app to authenticate users if AAD_APP_CLIENT_ID environment variable is empty
     with:
-      name: share-now-aad # Note: when you run configure/aadApp, the AAD app name will be updated based on the definition of manifest. If you don't want to change the name, ensure the name in AAD manifest is same with the name defined here.
+      name: share-now-aad # Note: when you run configure/aadApp, the AAD app name will be updated based on the definition of manifest. If you don't want to change the name, ensure the name in AAD manifest is the same with the name defined here.
       generateClientSecret: true # If the value is false, the action will not generate client secret for you
-    # Output: following environment variable will be persisted in current environment's .env file.
+    # Output: the following environment variable(s) will be persisted in the current environment's .env file.
     # AAD_APP_CLIENT_ID: the client id of AAD app
     # SECRET_AAD_APP_CLIENT_SECRET: the client secret of AAD app
     # AAD_APP_OBJECT_ID: the object id of AAD app
@@ -18,13 +18,13 @@ provision:
   - uses: teamsApp/create # Creates a Teams app
     with:
       name: share-now # Teams app name
-    # Output: following environment variable will be persisted in current environment's .env file.
+    # Output: the following environment variable(s) will be persisted in the current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
   - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
     with:
       name: share-now-bot
-    # Output: following environment variable will be persisted in current environment's .env file.
+    # Output: the following environment variable(s) will be persisted in the current environment's .env file.
     # BOT_ID: the AAD app client id created for Bot Registration.
     # SECRET_BOT_PASSWORD: the AAD app client secret created for Bot Registration.
 
@@ -48,16 +48,16 @@ provision:
 
   - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
     with:
-      manifestPath: ./aad.manifest.json # Relative path to this file. Environment variables in manifest will be replaced before apply to AAD app
+      manifestPath: ./aad.manifest.json # Relative path to this file. Environment variables in manifest will be replaced before applying to AAD app
       outputFilePath: ./build/aad.manifest.${{TEAMSFX_ENV}}.json
-  # Output: following environment variable will be persisted in current environment's .env file.
+  # Output: the following environment variable(s) will be persisted in the current environment's .env file.
   # AAD_APP_ACCESS_AS_USER_PERMISSION_ID: the id of access_as_user permission which is used to enable SSO
 
   - uses: teamsApp/validate
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
 
-  - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
+  - uses: teamsApp/zipAppPackage # Build Teams app package with the latest env value
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
@@ -65,8 +65,8 @@ provision:
 
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
     with:
-      appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
-    # Output: following environment variable will be persisted in current environment's .env file.
+      appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for building zip file.
+    # Output: the following environment variable(s) will be persisted in the current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
 deploy:
