--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,8 +9,8 @@
 # In each subsection folders are ordered first by depth, then alphabetically.
 # This should make it easy to add new rules without breaking existing ones.
 
-/NPM-search-connector-M365 @kimizhu @kuojianlu
-/adaptive-card-notification @kimizhu @XiaofuHuang
+/NPM-search-connector-M365 @kimizhu @swatDong @kuojianlu
+/adaptive-card-notification @kimizhu @dooriya @swatDong @XiaofuHuang
 /bot-sso @eriolchan @yukun-dong
 /command-bot-with-sso @adashen @SLdragon
 /graph-connector-app @adashen @formulahendry
@@ -22,14 +22,14 @@
 /hello-world-in-meeting @eriolchan @JerryYangKai
 /hello-world-tab-with-backend @eriolchan @hund030
 /hello-world-teams-tab-and-outlook-add-in @MSFT-yiz @1yefuwang1
-/incoming-webhook-notification @kimizhu @XiaofuHuang
+/incoming-webhook-notification @kimizhu @dooriya @swatDong @XiaofuHuang
 /query-org-user-with-message-extension-sso @adashen @wenytang-ms
 /share-now @adashen @xzf0587
-/stocks-update-notification-bot @kimizhu @XiaofuHuang
-/stocks-update-notification-bot-dotnet @kimizhu @XiaofuHuang
+/stocks-update-notification-bot @kimizhu @dooriya @swatDong @XiaofuHuang
+/stocks-update-notification-bot-dotnet @kimizhu @dooriya @swatDong @XiaofuHuang
 /todo-list-SPFx @MSFT-yiz @HuihuiWu-Microsoft
 /team-central-dashboard @eriolchan @huimiu
 /todo-list-with-Azure-backend @adashen @formulahendry
-/todo-list-with-Azure-backend-M365 @kimizhu @kuojianlu
+/todo-list-with-Azure-backend-M365 @kimizhu @swatDong @kuojianlu
 /developer-assist-dashboard @MSFT-yiz @HuihuiWu-Microsoft
 /.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
