--- a/todo-list-with-Azure-backend/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend/.vscode/tasks.json
@@ -35,7 +35,7 @@
         },
         {
             // Create the debug resources.
-            // See https://aka.ms/teamsfx-provision-task to know the details and how to customize the args.
+            // See https://aka.ms/teamsfx-tasks/provision to know the details and how to customize the args.
             "label": "Provision",
             "type": "teamsfx",
             "command": "provision",
@@ -45,7 +45,7 @@
         },
         {
             // Build project.
-            // See https://aka.ms/teamsfx-deploy-task to know the details and how to customize the args.
+            // See https://aka.ms/teamsfx-tasks/deploy to know the details and how to customize the args.
             "label": "Deploy",
             "type": "teamsfx",
             "command": "deploy",
