--- a/query-org-user-with-message-extension-sso/env/.env.local
+++ b/query-org-user-with-message-extension-sso/env/.env.local
@@ -1,3 +1,4 @@
+# This file includes environment variables that can be committed to git. It's gitignored by default because it represents your local development environment.
 # Built-in environment variables
 TEAMSFX_ENV=local 
 
@@ -6,6 +7,3 @@ BOT_ID=
 TEAMS_APP_ID=
 BOT_DOMAIN=
 BOT_ENDPOINT= 
-
-# Secrets. You can add your own secret value, prefixed with SECRET_
-SECRET_BOT_PASSWORD=
