--- a/query-org-user-with-message-extension-sso/teamsapp.yml
+++ b/query-org-user-with-message-extension-sso/teamsapp.yml
@@ -3,10 +3,28 @@ version: 1.0.0
 environmentFolderPath: ./env
 
 provision:
+  - uses: aadApp/create # Creates a new AAD app to authenticate users if AAD_APP_CLIENT_ID environment variable is empty
+    with:
+      name: QueryOrgUserWithMESSO # Note: when you run configure/aadApp, the AAD app name will be updated based on the definition of manifest. If you don't want to change the name, ensure the name in AAD manifest is same with the name defined here.
+      generateClientSecret: true # If the value is false, the action will not generate client secret for you
+      # Output: following environment variable will be persisted in current environment's .env file.
+      # AAD_APP_CLIENT_ID: the client id of AAD app
+      # AAD_APP_CLIENT_SECRET: the client secret of AAD app
+      # AAD_APP_OBJECT_ID: the object id of AAD app
+      # AAD_APP_TENANT_ID: the tenant id of AAD app
+      # AAD_APP_OAUTH_AUTHORITY_HOST: the host of OAUTH authority of AAD app
+      # AAD_APP_OAUTH_AUTHORITY: the OAUTH authority of AAD app
+  
+  - uses: teamsApp/create # Creates a Teams app
+    with:
+      name: QueryOrgUserWithMESSO # Teams app name
+    # Output: following environment variable will be persisted in current environment's .env file.
+    # TEAMS_APP_ID: the id of Teams app
+
   - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
     with:
       name: QueryOrgUserWithMESSO-${{TEAMSFX_ENV}}
-    # Output: following environment variable will be persisted in current environment's .env file.
+    # Output: the following environment variable(s) will be persisted in the current environment's .env file.
     # BOT_ID: the AAD app client id created for Bot Registration.
     # SECRET_BOT_PASSWORD: the AAD app client secret created for Bot Registration.
 
@@ -20,43 +38,6 @@ provision:
           deploymentName: Create-resources-for-bot
       bicepCliVersion: v0.9.1 # Teams Toolkit will download this bicep CLI version from github for you, will use bicep CLI in PATH if you remove this config.
     # Output: every bicep output will be persisted in current environment's .env file with certain naming conversion. Refer https://aka.ms/teamsfx-actions/arm-deploy for more details on the naming conversion rule.
-
-deploy:
-  - uses: cli/runNpmCommand # Run npm command
-    with:
-      args: install
-  - uses: cli/runNpmCommand
-    with:
-      args: run build --if-present
-  - uses: azureAppService/deploy # Deploy bits to Azure App Serivce
-    env:
-      REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
-      REACT_APP_START_LOGIN_PAGE_URL: ${{TAB_ENDPOINT}}/auth-start.html
-    with:
-      distributionPath: . # Deploy base folder
-      ignoreFile: ./.webappignore # Can be changed to any ignore file location, leave blank will ignore nothing
-      resourceId: ${{BOT_AZURE_APP_SERVICE_RESOURCE_ID}} # The resource id of the cloud resource to be deployed to
-
-registerApp:
-  - uses: aadApp/create # Creates a new AAD app to authenticate users if AAD_APP_CLIENT_ID environment variable is empty
-    with:
-      name: QueryOrgUserWithMESSO # Note: when you run configure/aadApp, the AAD app name will be updated based on the definition of manifest. If you don't want to change the name, ensure the name in AAD manifest is same with the name defined here.
-      generateClientSecret: true # If the value is false, the action will not generate client secret for you
-      # Output: following environment variable will be persisted in current environment's .env file.
-      # AAD_APP_CLIENT_ID: the client id of AAD app
-      # AAD_APP_CLIENT_SECRET: the client secret of AAD app
-      # AAD_APP_OBJECT_ID: the object id of AAD app
-      # AAD_APP_TENANT_ID: the tenant id of AAD app
-      # AAD_APP_OAUTH_AUTHORITY_HOST: the host of OAUTH authority of AAD app
-      # AAD_APP_OAUTH_AUTHORITY: the OAUTH authority of AAD app
-      
-  - uses: teamsApp/create # Creates a Teams app
-    with:
-      name: QueryOrgUserWithMESSO # Teams app name
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # TEAMS_APP_ID: the id of Teams app
-
-configureApp:
   - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
     with:
       manifestPath: ./aad.manifest.json # Relative path to teamsfx folder. Environment variables in manifest will be replaced before apply to AAD app
@@ -77,6 +58,22 @@ configureApp:
       appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to teamsfx folder. This is the path for built zip file.
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
+
+deploy:
+  - uses: cli/runNpmCommand # Run npm command
+    with:
+      args: install
+  - uses: cli/runNpmCommand
+    with:
+      args: run build --if-present
+  - uses: azureAppService/deploy # Deploy bits to Azure App Serivce
+    env:
+      REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
+      REACT_APP_START_LOGIN_PAGE_URL: ${{TAB_ENDPOINT}}/auth-start.html
+    with:
+      distributionPath: . # Deploy base folder
+      ignoreFile: ./.webappignore # Can be changed to any ignore file location, leave blank will ignore nothing
+      resourceId: ${{BOT_AZURE_APP_SERVICE_RESOURCE_ID}} # The resource id of the cloud resource to be deployed to
 
 publish:
   - uses: teamsApp/validateManifest # Validate using manifest schema
