--- a/hello-world-in-meeting/teamsapp.local.yml
+++ b/hello-world-in-meeting/teamsapp.local.yml
@@ -2,14 +2,13 @@ version: 1.0.0
 
 environmentFolderPath: ./env
 
-registerApp:
+provision:
   - uses: teamsApp/create # Creates a Teams app
     with:
       name: hello-world-in-meeting-${{TEAMSFX_ENV}} # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
-configureApp:
   - uses: file/updateEnv # Generate env to .env file
     with:
       envs:
