--- a/bot-sso/teamsapp.local.yml
+++ b/bot-sso/teamsapp.local.yml
@@ -63,7 +63,7 @@ deploy:
   - uses: cli/runNpmCommand # Run npm command
     with:
       args: install --no-audit
-  - uses: file/updateEnv # Generate runtime environment variables
+  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
     with:
       target: ./.localSettings
       envs:
