--- a/hello-world-in-meeting/package.json
+++ b/hello-world-in-meeting/package.json
@@ -1,49 +1,49 @@
 {
-    "name": "hello-world-in-meeting",
-    "version": "0.1.0",
-    "engines": {
-        "node": "14 || 16 || 18"
-    },
-    "private": true,
-    "dependencies": {
-        "@fluentui/react-northstar": "^0.62.0",
-        "@microsoft/teams-js": "^2.2.0",
-        "@microsoft/teamsfx": "^2.0.0",
-        "@microsoft/teamsfx-react": "^2.0.0",
-        "axios": "^0.21.1",
-        "react": "^16.14.0",
-        "react-dom": "^16.14.0",
-        "react-responsive": "^9.0.2",
-        "react-router-dom": "^5.1.2",
-        "react-scripts": "^5.0.1"
-    },
-    "devDependencies": {
-        "env-cmd": "^10.1.0"
-    },
-    "scripts": {
-        "dev:teamsfx": "env-cmd --silent -f .localSettings npm run start",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "eject": "react-scripts eject",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "homepage": "."
+  "name": "hello-world-in-meeting",
+  "version": "0.1.0",
+  "engines": {
+    "node": "14 || 16 || 18"
+  },
+  "private": true,
+  "dependencies": {
+    "@fluentui/react-components": "^9.18.0",
+    "@microsoft/teams-js": "^2.7.1",
+    "@microsoft/teamsfx": "^2.2.0",
+    "@microsoft/teamsfx-react": "^3.0.0-alpha",
+    "axios": "^0.21.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "^5.0.1"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
+  },
+  "scripts": {
+    "dev:teamsfx": "env-cmd --silent -f .localSettings npm run start",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "homepage": "."
 }
