--- a/todo-list-with-Azure-backend-M365/env/.env.dev
+++ b/todo-list-with-Azure-backend-M365/env/.env.dev
@@ -1,3 +1,5 @@
+# This file includes environment variables that will be committed to git by default.
+
 # Built-in environment variables
 TEAMSFX_ENV=dev
 
@@ -20,6 +22,3 @@ M365_CLIENT_ID=
 M365_CLIENT_SECRET=
 M365_TENANT_ID=
 M365_OAUTH_AUTHORITY_HOST=
-
-# Secrets. You can add your own secret value, prefixed with SECRET_
-SECRET_AAD_APP_CLIENT_SECRET=
